# haimp-simple-msa

./: .gitignore  README.md  pyproject.toml
k8s/local/: auth-server-config.yaml  auth-server.yaml  haimp-database-config.yaml  haimp-database-initialization.yaml  haimp-database.yaml
projects/api_gateway/: pyproject.toml
projects/api_gateway/src/: exceptions.py  settings.py
projects/api_gateway/src/tokens/: verifier.py
projects/api_gateway/tests/: conftest.py  test_header.py  test_tokens.py
projects/api_gateway/webapp/: app.py  dependency.py  router.py
projects/auth_server/: .gitignore  Dockerfile  README.md  build_on_minikube.sh  pyproject.toml
projects/auth_server/scripts/: create_test_db.py  init-file.sql
projects/auth_server/src/: database.py  exceptions.py  settings.py
projects/auth_server/src/tokens/: manager.py  signature.py
projects/auth_server/tests/: conftest.py  test_domains.py  test_dto.py  test_settings.py
projects/auth_server/tests/users/: test_login_manager.py  test_repository.py
projects/auth_server/webapp/: app.py  dependency.py  dto.py
projects/auth_server/webapp/routers/: auth.py  health_check.py
scripts/: build_all.sh  create_test_db.py
src/: auth.py  database.py  domains.py  exceptions.py  signature.py  tokens.py
src/tokens/: auth.py
src/users/: login_manager.py  models.py  reader.py  repository.py
tests/: conftest.py  test_encrypt.py  test_jwt.py  test_public_key.py  test_settings.py  test_signature.py  test_tokens.py
tests/tokens/: test_encrypt.py  test_jwt.py  test_signature.py  test_tokens.py
tests/users/: test_reader.py
webapp/: dependency.py  dto.py
webapp/routers/: auth.py
